2003-07-11  Richard Sandiford  <rsandifo@redhat.com>

	* elf32-h8300.c: Convert function prototypes and definitions
	to C90 syntax.
	* coff-h8300.c: Likewise.
	* cpu-h8300.c: Likewise.

2003-07-11  Alan Modra  <amodra@bigpond.net.au>

	* po/SRC-POTFILES.in: Regenerate.
	* po/bfd.pot: Likewise.

2003-07-10  Bob Wilson  <bob.wilson@acm.org>

	* elf32-xtensa.c (elf_xtensa_create_dynamic_sections): Create new
	.got.loc section.  Do not set SEC_ALLOC or SEC_LOAD flags for the
	.xt.lit.plt section.
	(elf_xtensa_size_dynamic_sections): Set size of the .got.loc section
	and allocate memory for it.
	(elf_xtensa_combine_prop_entries): Copy contents of .xt.lit output
	section to the .got.loc section.
	(elf_xtensa_finish_dynamic_sections): Fix up call to
	elf_xtensa_combine_prop_entries and set DT_XTENSA_GOT_LOC_OFF to
	the address of .got.loc.
	(relax_property_section): Shrink .got.loc to match changes in any
	literal table section.
	(xtensa_is_property_section): Change to match
	xtensa_get_property_section_name.
	(xtensa_is_littable_section): New.

2003-07-10  H.J. Lu <hongjiu.lu@intel.com>

	* elfxx-ia64.c (IA64_HOWTO): Set dst_mask to -1 instead of
	-1LL.

2003-07-10  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am (BFD32_BACKENDS): Add elf32-am33lin.lo.
	(BFD32_BACKENDS_CFILES): elf32-am33lin.c not elf32-am33lin.lo.
	Run "make dep-am".
	* Makefile.in: Regenerate.

2003-07-10  Alexandre Oliva  <aoliva@redhat.com>

	2001-09-12  Alexandre Oliva  <aoliva@redhat.com>
	* elf32-am33lin.c (ELF_MACHINE_CODE): Redefine to EM_MN10300.
	(ELF_MACHINE_ALT1): Define to EM_CYGNUS_MN10300.
	2001-06-02  Nick Clifton  <nickc@cambridge.redhat.com>
	* elf32-am33lin.c: Rename global functions.
	2001-05-09  Alexandre Oliva  <aoliva@redhat.com>
	* config.bfd (am33_2.0, am33_2.0-*-linux*): Added.
	* configure.in (bfd_elf32_am33lin_vec): Added.
	* Makefile.am (BFD32_BACKENDS): Added elf32-am33lin.lo.
	(elf32-am33lin.lo): List dependencies.
	* aclocal.m4, configure, Makefile.in: Rebuilt.