@@ -1,3 +1,8 @@
+2003-07-11  Richard Sandiford  <rsandifo@redhat.com>
+
+	* ld-h8300/relax-3{.s,.d,-coff.d}: New test.
+	* ld-h8300/h8300.exp: Run it.
+
 2003-07-10  Alan Modra  <amodra@bigpond.net.au>
 
 	* ld-powerpc/powerpc.exp: Dump output .got section rather than .toc.
